welcome.lessons.welcome.array.array667.Array667.scala.error
array667:7: error: identifier expected but integer literal found.
      if (nums[i+1] == 6 || nums[i+1] == 7) {
                 ^array667:10: error: ']' expected but '}' found.
    }
    ^