welcome.lessons.welcome.array.array667.Array667.scala.code
def array667(nums:Array[Int]): Int = {
var count = 0;
 

    if (nums == 6) {
    	count=count+1
      if (nums[i+1] == 6 || nums[i+1] == 7) {
        count=count+1;
      }
    }
  }
  return count;
